# B2B_SaaS

backend/: .env  pyproject.toml  start.py  taskboard.db
backend/app/: main.py
backend/app/api/: tasks.py
backend/app/core/: auth.py  clerk.py  config.py  database.py
backend/app/models/: task.py
backend/app/schemas/: task.py
frontend/: package-lock.json
frontend/src/components/: Layout.jsx
frontend/src/pages/: DashboardPage.jsx
frontend/src/services/: api.js
frontend/src/styles/: variables.css
